# wow_fishing_bot

./: README.md  key_press.sh  run.sh
src/: CMakeLists.txt  blob_tracker.cpp  blob_tracker.h  canny.cpp  canny_tracker.cpp  canny_tracker.h  main.cpp  threshold.cpp  time_series.cpp  time_series.h
